--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,20 @@
       <div class="absolute flex justify-center w-full h-full text-white text-xl lg:text-6xl pt-10  px-5 md:px-20">
           <div class="fixed top-0 z-50 w-full flex items-center justify-between h-24 px-5 lg:mx-20 bg-[rgba(34,34,34,0.75)] shadow-xl shadow-white/20 overflow-hidden">
             <div class="text-white h-fit">
-              <p>Construct Civil</p>
+              <!-- <p>Construct Civil</p> -->
+              <svg width="445.68334655761726" height="76.75427471437084" viewBox="0 0 370.00000000000006 63.72031143561211" class="looka-1j8o68f">
+                <defs id="SvgjsDefs1253"></defs>
+                <g id="SvgjsG1254" featurekey="HdFLvg-0" transform="matrix(0.7490547664004317,0,0,0.7490547664004317,-2.5819078631548633,-5.659386158214047)" fill="#ffffff">
+                  <g xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3.455,59.074C3.997,31.037,33.352,10.67,65.767,7.953c7.893-0.659,21.247-0.844,31.131,2.25l-9.352,17.253   c-6.528-1.661-14.235-2.134-21.918-1.797c-33.064,1.144-53.872,20.544-54.336,40.159c-0.244,10.416,4.785,20.447,14.77,26.248   l-0.652,0.557C10.918,85.411,3.16,74.064,3.455,59.074z"></path>
+                    <path d="M18.844,65.656c3.279-16.372,21.514-28.878,50.168-27.383c3.968,0.209,8.473,0.598,12.494,1.479l-8.283,15.273   c-2.578-0.354-6.603-1.071-10.058-1.257C40.59,52.587,26.7,61.927,24.396,73.837c-1.237,6.395,1.385,13.541,7.928,18.034   l-0.656,0.504C20.464,86.175,16.835,75.665,18.844,65.656z"></path>
+                    <path d="M32.375,73.946c5.484-9.222,22.011-12.208,36.767-8.624l-4.326,7.93c-11.73-2.699-25.31-0.866-29.202,5.896   c-2.116,3.68-0.936,8.737,1.454,12.306l-0.438,0.441C31.113,86.96,29.106,79.448,32.375,73.946z"></path>
+                  </g>
+                </g>
+                <g id="SvgjsG1255" featurekey="VomJeJ-0" transform="matrix(3.0062272045829452,0,0,3.0062272045829452,87.83551292217444,-7.0753700059780265)" fill="#ffffff">
+                  <path d="M8.66 11.78 l0 -0.24 q0 -2.96 -2.2 -2.96 q-1.26 0 -1.82 1.15 t-0.56 3.39 q0 2.22 0.7 3.3 t2.04 1.08 q0.7 0 1.55 -0.33 t1.85 -1.05 q0.5 0.34 0.93 0.93 t0.53 1.13 q-0.46 0.44 -1.07 0.83 t-1.32 0.67 t-1.48 0.45 t-1.55 0.17 q-1.54 0 -2.6 -0.59 t-1.71 -1.57 t-0.94 -2.26 t-0.29 -2.66 q0 -1.8 0.45 -3.15 t1.22 -2.25 t1.81 -1.35 t2.22 -0.45 q1.2 0 2.18 0.32 t1.67 0.88 t1.06 1.32 t0.37 1.64 q0 1.78 -1.82 1.78 q-0.54 0 -1.22 -0.18 z M20.48 10.9 q1.44 1.44 1.44 4.12 q0 1.2 -0.31 2.18 t-0.9 1.67 t-1.45 1.06 t-1.98 0.37 t-1.97 -0.38 t-1.44 -1.07 t-0.89 -1.67 t-0.3 -2.16 q0 -1.2 0.3 -2.17 t0.88 -1.67 t1.44 -1.08 t1.98 -0.38 q1.98 0 3.2 1.18 z M17.3 12.059999999999999 q-0.44 0 -0.71 0.21 t-0.43 0.57 t-0.22 0.83 t-0.06 1.01 q0 0.84 0.05 1.45 t0.2 1.02 t0.42 0.61 t0.71 0.2 q0.88 0 1.16 -0.77 t0.28 -2.19 q0 -1.44 -0.28 -2.19 t-1.12 -0.75 z M32.32 13.4 l0 4.1 q0 1.32 0.48 1.98 q-0.76 0.68 -1.82 0.68 q-1.04 0 -1.42 -0.48 t-0.38 -1.46 l0 -4.26 q0 -0.68 -0.18 -1 t-0.7 -0.32 q-0.3 0 -0.68 0.16 t-0.78 0.52 l0 6.68 q-0.34 0.06 -0.74 0.09 t-0.82 0.03 t-0.82 -0.03 t-0.74 -0.09 l0 -9.98 l0.14 -0.14 l1.18 0 q1.22 0 1.64 1.2 q1.4 -1.24 2.78 -1.24 q1.4 0 2.13 0.97 t0.73 2.59 z M33.86 19.32 q0.02 -0.52 0.27 -1.14 t0.59 -0.98 q1.6 0.84 2.78 0.84 q0.56 0 0.86 -0.19 t0.3 -0.51 q0 -0.6 -0.92 -0.9 l-1.1 -0.42 q-2.5 -0.92 -2.5 -3 q0 -1.52 1.05 -2.41 t2.83 -0.89 q0.88 0 1.94 0.25 t1.74 0.59 q0.04 0.56 -0.22 1.23 t-0.64 0.95 q-1.68 -0.76 -2.8 -0.76 q-0.4 0 -0.61 0.18 t-0.21 0.46 q0 0.48 0.76 0.76 l1.24 0.44 q2.66 0.94 2.66 3.22 q0 1.5 -1.1 2.38 t-3.14 0.88 t-3.78 -0.98 z M49.36 10 q0.12 0.56 0.12 1.12 t-0.12 1.1 l-2.38 -0.04 l0 4.6 q0 0.94 0.88 0.94 l1.12 0 q0.26 0.72 0.26 1.32 t-0.08 0.86 q-1.48 0.2 -2.72 0.2 q-2.52 0 -2.52 -2.78 l0 -5.12 l-1.56 0.02 q-0.14 -0.5 -0.14 -1.09 t0.14 -1.13 l1.56 0.04 l0 -1.16 q0 -1.02 0.39 -1.45 t1.31 -0.43 l1.22 0 l0.14 0.14 l0 2.9 z M50.42 11.46 q0.1 -0.4 0.38 -0.89 t0.56 -0.71 q1.84 0.14 2.56 1.82 q0.76 -1.8 2.5 -1.8 q0.52 0 1.32 0.16 q0 0.62 -0.21 1.47 t-0.57 1.45 q-0.34 -0.12 -1.02 -0.2 q-1 0 -1.64 1.02 l0 6.22 q-0.66 0.12 -1.55 0.12 t-1.57 -0.12 l0 -6.46 q0 -1.5 -0.76 -2.08 z M58.9 16.62 l0 -4.1 q0 -1.3 -0.48 -2 q0.74 -0.66 1.8 -0.66 t1.44 0.48 t0.38 1.46 l0 4.24 q0 0.7 0.16 1.02 t0.84 0.32 q0.66 0 1.34 -0.68 l0 -6.68 q0.66 -0.12 1.54 -0.12 t1.58 0.12 l0 7.12 q0 1.08 0.56 1.46 q-0.1 0.4 -0.38 0.87 t-0.58 0.69 q-1.64 -0.06 -2.36 -1.4 q-1.58 1.42 -2.98 1.42 t-2.13 -0.97 t-0.73 -2.59 z M74.91999999999999 14.440000000000001 l0 -0.26 q0 -1.12 -0.24 -1.63 t-0.9 -0.51 q-0.7 0 -0.98 0.69 t-0.28 2.29 q0 0.8 0.11 1.34 t0.32 0.87 t0.53 0.48 t0.76 0.15 q0.46 0 1.02 -0.2 t1.2 -0.64 q0.18 0.1 0.37 0.29 t0.35 0.43 t0.28 0.51 t0.18 0.51 q-0.66 0.7 -1.72 1.12 t-2.16 0.42 q-2.14 0 -3.28 -1.4 t-1.14 -3.98 q0 -1.32 0.37 -2.3 t0.98 -1.62 t1.4 -0.96 t1.65 -0.32 q0.88 0 1.61 0.24 t1.26 0.68 t0.82 1.05 t0.29 1.35 q0 0.84 -0.49 1.18 t-1.21 0.34 q-0.6 0 -1.1 -0.12 z M83.24 12.32 l0 7.68 q-0.34 0.06 -0.74 0.09 t-0.82 0.03 t-0.83 -0.03 t-0.75 -0.09 l0 -6.62 q0 -1.16 -0.94 -1.16 l-0.3 0 q-0.12 -0.38 -0.12 -1.06 q0 -0.66 0.12 -1.12 q0.52 -0.04 0.96 -0.07 t0.8 -0.03 l0.44 0 q1.02 0 1.6 0.64 t0.58 1.74 z M79.74 6 q0.58 -0.32 1.5 -0.32 q0.94 0 1.46 0.32 q0.24 0.54 0.24 1.16 t-0.24 1.16 q-0.58 0.3 -1.52 0.3 t-1.44 -0.3 q-0.24 -0.54 -0.24 -1.16 t0.24 -1.16 z M89.25999999999999 17.62 l1.74 -7.58 q0.56 -0.12 1.26 -0.12 q0.86 0 1.5 0.24 l0.1 0.14 q-2.04 7.44 -2.78 9.7 q-1.02 0.12 -2.15 0.12 t-1.61 -0.31 t-0.74 -1.19 l-2.4 -8.36 q0.98 -0.42 1.74 -0.42 t1.18 0.33 t0.62 1.13 l0.9 3.74 q0.1 0.38 0.44 2.42 q0.02 0.16 0.2 0.16 z"></path>
+                </g>
+              </svg>
             </div>
             <nav class="h-fit">
               <ul class="hidden md:flex lg:gap-10 text-black text-xs md:text-base">
@@ -40,7 +53,7 @@
           <div class="rounded-2xl flex justify-center border border-gray-300 bg-gray-50 hover:shadow-md hover:shadow-secondarycolor/50">
             <div class="flex-col w-full">
               <div class="flex justify-center">
-                <img [src]="servicio.imagen" class="rounded-b-2xl" alt="Imagen-servicio">
+                <img [src]="servicio.imagen" class="rounded-b-2xl" alt="Imagen-servicio" >
               </div>
               <div class="text-center px-6 pt-5">
                 <p class="text-xl font-semibold">{{servicio.titulo}}</p>
@@ -133,7 +146,8 @@
           </div>
         </div>
       </div>
-      <div class="lg:col-span-2 h-full bg-secondarycolor text-primarycolor flex justify-center py-5">
+      
+      <!-- <div class="lg:col-span-2 h-full bg-secondarycolor text-primarycolor flex justify-center py-5">
         <div class="flex flex-col px-4 w-56 justify-center items-center hover:bg-primarycolor/10 transition-all ease-in-out duration-500">
           <div class="font-semibold text-sm sm:text-lg md:text-6xl">2003</div>
           <div class="text-[0.6rem] sm:text-xs md:text-lg font-medium text-center">Año de establecimiento</div>
@@ -151,7 +165,7 @@
           <div class="text-[0.6rem] sm:text-xs md:text-lg font-medium text-center">Premios obtenidos</div>
         </div>
 
-      </div>
+      </div> -->
     </div>
   </section>
 
@@ -202,13 +216,15 @@
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
           </svg>
-          <span>+593999999999</span>
+          <a href="https://wa.me/593992746878" target="_blank">
+            <span>+593 99 274 6878</span>
+          </a>
         </div>
         <div class="flex gap-2 py-2 text-sm xs:text-base">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 12a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0Zm0 0c0 1.657 1.007 3 2.25 3S21 13.657 21 12a9 9 0 1 0-2.636 6.364M16.5 12V8.25" />
           </svg>
-          <span>emailgmail.com</span>
+          <span>{{correo}}</span>
         </div>
         <div class="flex gap-2 py-2 text-sm xs:text-base">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
@@ -271,7 +287,7 @@
     </div>
 
     <div class="text-center pb-6">
-      <p class="text-xs md:text-sm">&copy; <span>2024</span> Construct civil. Todos los derechos reservados.</p>
+      <p class="text-xs md:text-sm">&copy; <span>2018</span> Construciv. Todos los derechos reservados.</p>
     </div>
 
   </footer>
